# dendro

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
scripts/: setup_env.sh  validate_crossdating.py
src/dendro/: __init__.py
src/dendro/cli/: __init__.py  main.py
src/dendro/crossdating/: __init__.py  correlator.py  detrend.py  matcher.py
src/dendro/imaging/: __init__.py  path_sampler.py  ring_detector.py  viewer.py
src/dendro/reference/: __init__.py  chronology_index.py  downloader.py  tucson_parser.py
src/dendro/visualization/: __init__.py  plots.py
tests/: __init__.py  test_correlator.py  test_detrend.py  test_known_date.py  test_tucson_parser.py  test_validation.py  test_visualization.py
